--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = "3.12.0"
 flask = "^3.1.0"
 pydantic = "^2.11.2"
 dotenv = "^0.9.9"
+pydantic-settings = "^2.8.1"
 
 
 [tool.poetry.group.dev.dependencies]
