--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ flask = "^3.1.0"
 pydantic = "^2.11.2"
 dotenv = "^0.9.9"
 pydantic-settings = "^2.8.1"
+injector = "^0.22.0"
 
 
 [tool.poetry.group.dev.dependencies]
