--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,8 @@ pydantic = "^2.11.2"
 dotenv = "^0.9.9"
 pydantic-settings = "^2.8.1"
 injector = "^0.22.0"
+loguru = "^0.7.3"
+requests = "^2.32.3"
 
 
 [tool.poetry.group.dev.dependencies]
