--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ pydantic-settings = "^2.8.1"
 injector = "^0.22.0"
 loguru = "^0.7.3"
 requests = "^2.32.3"
+ebony = { git = "https://github.com/pranjal-upadhyaya/webway.git", branch = "dev" }
 
 
 [tool.poetry.group.dev.dependencies]
